[gd_scene load_steps=12 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://Scenes/GUI/HUD.gd" type="Script" id=2]
[ext_resource path="res://Scenes/Menus/PauseMenuPopupDialog.tscn" type="PackedScene" id=4]

[sub_resource type="InputEventKey" id=1]
scancode = 49

[sub_resource type="ShortCut" id=2]
shortcut = SubResource( 1 )

[sub_resource type="InputEventKey" id=3]
scancode = 50

[sub_resource type="ShortCut" id=4]
shortcut = SubResource( 3 )

[sub_resource type="InputEventKey" id=5]
scancode = 51

[sub_resource type="ShortCut" id=6]
shortcut = SubResource( 5 )

[sub_resource type="InputEventKey" id=7]
scancode = 52

[sub_resource type="ShortCut" id=8]
shortcut = SubResource( 7 )

[node name="HUD" type="CanvasLayer"]
script = ExtResource( 2 )

[node name="header" type="HBoxContainer" parent="."]
anchor_right = 1.0
margin_bottom = 50.0
rect_min_size = Vector2( 0, 50 )

[node name="Currency" type="HBoxContainer" parent="header"]
margin_right = 76.0
margin_bottom = 64.0
alignment = 1

[node name="Icon" type="TextureRect" parent="header/Currency"]
margin_right = 64.0
margin_bottom = 64.0
texture = ExtResource( 1 )

[node name="SunAmount" type="Label" parent="header/Currency"]
margin_left = 68.0
margin_top = 25.0
margin_right = 76.0
margin_bottom = 39.0
text = "0"

[node name="PauseButton" type="Button" parent="header"]
margin_left = 80.0
margin_right = 130.0
margin_bottom = 64.0
text = "Pause"

[node name="Footer" type="MarginContainer" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -92.0
rect_min_size = Vector2( 0, 50 )
mouse_filter = 2
size_flags_horizontal = 4
custom_constants/margin_right = 50
custom_constants/margin_top = 5
custom_constants/margin_left = 50
custom_constants/margin_bottom = 5

[node name="GridContainer" type="GridContainer" parent="Footer"]
margin_left = 362.0
margin_top = 5.0
margin_right = 661.0
margin_bottom = 87.0
size_flags_horizontal = 6
size_flags_vertical = 3
custom_constants/hseparation = 10
columns = 10

[node name="Melee" type="VBoxContainer" parent="Footer/GridContainer"]
margin_right = 64.0
margin_bottom = 82.0
alignment = 1

[node name="Label" type="Label" parent="Footer/GridContainer/Melee"]
margin_right = 64.0
margin_bottom = 14.0
size_flags_horizontal = 3
text = "1. Melee"
align = 1

[node name="ActionButton" type="TextureButton" parent="Footer/GridContainer/Melee"]
margin_top = 18.0
margin_right = 64.0
margin_bottom = 82.0
shortcut = SubResource( 2 )
texture_normal = ExtResource( 1 )
texture_pressed = ExtResource( 1 )
texture_hover = ExtResource( 1 )

[node name="Range" type="VBoxContainer" parent="Footer/GridContainer"]
margin_left = 74.0
margin_right = 138.0
margin_bottom = 82.0
alignment = 1

[node name="Label" type="Label" parent="Footer/GridContainer/Range"]
margin_right = 64.0
margin_bottom = 14.0
size_flags_horizontal = 3
text = "2. Range"
align = 1

[node name="ActionButton" type="TextureButton" parent="Footer/GridContainer/Range"]
margin_top = 18.0
margin_right = 64.0
margin_bottom = 82.0
shortcut = SubResource( 4 )
texture_normal = ExtResource( 1 )
texture_pressed = ExtResource( 1 )
texture_hover = ExtResource( 1 )

[node name="Build" type="VBoxContainer" parent="Footer/GridContainer"]
margin_left = 148.0
margin_right = 212.0
margin_bottom = 82.0
alignment = 1

[node name="Label" type="Label" parent="Footer/GridContainer/Build"]
margin_right = 64.0
margin_bottom = 14.0
size_flags_horizontal = 3
text = "3. Build"
align = 1

[node name="ActionButton" type="TextureButton" parent="Footer/GridContainer/Build"]
margin_top = 18.0
margin_right = 64.0
margin_bottom = 82.0
shortcut = SubResource( 6 )
texture_normal = ExtResource( 1 )
texture_pressed = ExtResource( 1 )
texture_hover = ExtResource( 1 )

[node name="Flashlight" type="VBoxContainer" parent="Footer/GridContainer"]
margin_left = 222.0
margin_right = 299.0
margin_bottom = 82.0
alignment = 1

[node name="Label" type="Label" parent="Footer/GridContainer/Flashlight"]
margin_right = 77.0
margin_bottom = 14.0
size_flags_horizontal = 3
text = "4. Flashlight"
align = 1

[node name="ActionButton" type="TextureButton" parent="Footer/GridContainer/Flashlight"]
margin_top = 18.0
margin_right = 77.0
margin_bottom = 82.0
shortcut = SubResource( 8 )
texture_normal = ExtResource( 1 )
texture_pressed = ExtResource( 1 )
texture_hover = ExtResource( 1 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]

[node name="DeathDialog" type="AcceptDialog" parent="."]
margin_right = 400.0
margin_bottom = 140.0
popup_exclusive = true
window_title = "Awwww"
dialog_text = "You are dead."

[node name="PauseMenuPopupDialog" parent="." instance=ExtResource( 4 )]

[connection signal="pressed" from="header/PauseButton" to="." method="_on_PauseButton_pressed"]
[connection signal="pressed" from="Footer/GridContainer/Melee/ActionButton" to="." method="_on_ActionButton_pressed" binds= [ "melee" ]]
[connection signal="pressed" from="Footer/GridContainer/Range/ActionButton" to="." method="_on_ActionButton_pressed" binds= [ "range" ]]
[connection signal="pressed" from="Footer/GridContainer/Build/ActionButton" to="." method="_on_ActionButton_pressed" binds= [ "build" ]]
[connection signal="pressed" from="Footer/GridContainer/Flashlight/ActionButton" to="." method="_on_ActionButton_pressed" binds= [ "flashlight" ]]
